# Cpp-AU

GeneticAlgorithm/: CMakeLists.txt  Genetic.cpp  Genetic.h  GeneticApplication.cpp  GeneticApplication.h  Individual.cpp  Individual.h  Randoms.cpp  Randoms.h  main.cpp
Genetic_Qt/: CMakeLists.txt  Genetic.cpp  Genetic.h  Genetic_main.cpp  Individual.cpp  Individual.h  Randoms.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Genetic_algorithm/: CMakeLists.txt  Genetic.cpp  Genetic.h  Individual.cpp  Individual.h  Randoms.cpp  Randoms.h  Run_Genetic.cpp  Run_Genetic.h  main.cpp
Genetic_algorithm/Genetic/: Genetic.cpp  Genetic.h
Genetic_algorithm/Run_Genetic/: Run_Genetic.cpp  Run_Genetic.h
Genetic_algorithm_2/: CMakeLists.txt
Genetic_algorithm_2/Genetic/: Genetic.h
Genetic_algorithm_2/Run_Genetic/: Run_Genetic.cpp  Run_Genetic.h
